prevent overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,12 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  html, body {
     font-family: Montserrat, sans-serif;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    overflow: hidden;
   }
 }
 
